--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 				    },
 				    autohidemode: false,
   					}).show();
+						$('.selectric-scroll').getNiceScroll().resize();
   				},
   			});
   		});
